# calls

./: CHANGELOG.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: api.rst  conf.py  requirements.txt
src/calls/: __init__.py
tests/: test_main.py
typesafety/: test_main.yml
