[tool.poetry]
name = "calls"
version = "0.1.1"
description = "Utilities for callables"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "calls", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/calls"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = ">=1,<5", python = "<3.8"}
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
isort = "^5.7.0"
mypy = "^0.812"
pytest = "^6.2.1"
tox = "^3.20.1"
black = "^20.8b1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.hg
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
