[tool.poetry]
name = "calls"
version = "0.2.1"
description = "Utilities for callables"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "calls", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/calls"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = ">=1,<5", python = "<3.8"}
typing-extensions = ">=4,<5.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^5"
isort = "^5.7.0"
mypy = "^0.971"
pytest = "^7.0.1"
tox = "^3.25.1"
black = "^22.8"

[tool.poetry.group.dev.dependencies]
pytest-mypy-plugins = "^1.10.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.hg
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
line_length = 79

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
